syntax = "proto2";

import "message-parts.proto";

package blockchain.proto.protobuf;
option java_package = "io.scalechain.blockchain.proto.protobuf";
option optimize_for = SPEED;


message Magic {
    required ByteArray value = 1;
}

message Checksum {
    required ByteArray checksum = 1;
}

message BitcoinMessageEnvelope {
    required Magic magic = 1;
    required string command = 2;
    required int32 length = 3;
    required Checksum checksum = 4;
    required ByteArray payload = 5;
}
